--- a/MyCodeCamp/appsettings.json
+++ b/MyCodeCamp/appsettings.json
@@ -9,5 +9,10 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Tokens": {
+    "Key": "FooBarQuuxIsTheStandardTypeOfStringWeUse12345",
+    "Issuer": "http://mycodecamp.org",
+    "Audience": "http://mycodecamp.org"
   }
 }
