--- a/MyCodeCamp/project.json
+++ b/MyCodeCamp/project.json
@@ -19,7 +19,8 @@
     "MyCodeCamp.Data": {
       "target": "project"
     },
-    "System.IdentityModel.Tokens.Jwt": "5.0.0"
+    "System.IdentityModel.Tokens.Jwt": "5.0.0",
+    "Microsoft.AspNetCore.Authentication.JwtBearer": "1.0.0"
   },
 
   "tools": {
